
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-4 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1080] Make sure traditional distribution doesnt need base directory writability
- Added modInstallTestSvn class for handling SVN-specific setup tests
- Fix to setup contexts controller to read existing paths on upgrade.
- setup/ memory_limit checks now only need to be 24M for setup/ to run.
- Updated to xPDO 1.0 revision 363 to fix "Error saving changes to parent object fk field action" messages being logged during install.
- Fixed issues with category remove dialog and lexicon topic grid
- [#MODX-1294] Fixed possible obscure problem when using Preview after changing the alias in a Resource
- [#MODX-1278] Fixed issues with checkbox TVs and default values, fixed the 'set to default' button for complex inputs
- [#MODX-1280] Fixed issues with the user create processor
- Added OnBeforeUserActivate, OnUserActivate events
- Added 'active' boolean field to modUser. Defaults to 1.
- Added OnCreateUser, OnDeleteUser, OnUpdateUser events
- [#MODX-1170] Fixed issues with Export Topic
- [#MODX-912] Fixed isinrole/ismember output filter
- [#MODX-677] Made capitalization consistent on Resource edit/create screen
- [#MODX-1251] Fixed issue with server offset displaying incorrectly
- [#MODX-896] Fixed issue with server_offset setting description
- [#MODX-928] Fixed issue where parent resource wasnt refreshing properly
- [#MODX-777] Made consistent the checkDirty behaviour of save buttons across manager
- [#MODX-938] Added check to build to check if core+core.transport.zip were removed before build starts. 
- [#MODX-629] Added missing automatic_alias setting to build
- [#MODX-790] Fixed issue where couldnt browse back to root directory with MODx.Browser