@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-4 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Fixing setup text for memory limit checks
 - [#MODX-1080] Make sure traditional distribution doesnt need base directory writability
 - Added modInstallTestSvn class for handling SVN-specific setup tests
 - Fix to setup contexts controller to read existing paths on upgrade.
